# splitstack-grpc-api

./: Dockerfile-dart  LICENSE  Makefile  README.md  docker-compose.yml
dart/: Makefile
go/: Makefile  go.mod  go.sum
go/api/: application.pb.go  application_grpc.pb.go  application_integration.pb.go  application_integration_grpc.pb.go  auth.pb.go  auth_grpc.pb.go  basestation.pb.go  basestation_grpc.pb.go  common.pb.go  device.pb.go  device_grpc.pb.go  device_key.pb.go  device_key_grpc.pb.go  device_profile.pb.go  device_profile_grpc.pb.go  device_queue.pb.go  device_queue_grpc.pb.go  login.pb.go  login_grpc.pb.go  stats.pb.go  stats_grpc.pb.go  tenant.pb.go  tenant_grpc.pb.go  tenant_user.pb.go  tenant_user_grpc.pb.go  user.pb.go  user_grpc.pb.go
go/bs/: basestation.pb.go  certificate.pb.go  cmd.pb.go  endnode.pb.go  rsp.pb.go
go/common/: common.pb.go  metrics.pb.go
go/stream/: frame.pb.go
go/streaming/: frame.pb.go
proto/api/: application.proto  application_integration.proto  auth.proto  basestation.proto  common.proto  (+10 more)
rust/: Cargo.toml  Makefile  build.rs
rust/proto/splitstack/api/: application.proto  basestation.proto  device_key.proto  login.proto  user.proto
rust/proto/splitstack/bs/: cmd.proto  endnode.proto  rsp.proto
rust/proto/splitstack/integration/: basestation_status_event.proto  basestation_vm_status_event.proto  common.proto  downlink_command.proto  variable_mac_uplink_event.proto
rust/proto/splitstack/stream/: api_request.proto  backend_interfaces.proto  frame.proto
rust/src/: api.rs  bs.rs  common.rs  integration.rs  lib.rs
(+19 files in other folders)
