[package]
name = "splitstack_api"
description = "SplitStack Protobuf / gRPC API definitions."
version = "0.1.0"
license = "MIT"
repository = "https://github.com/SplitStackServer/splitstack"
edition = "2024"

[features]
default = ["api", "json"]
api = [
    "tonic-prost",
    "tonic-prost-build/transport",
    "tonic/transport",
    "tonic-build/transport",
    "tokio",
]
server = ["tonic/router"]
json = ["pbjson", "pbjson-types", "serde"]
internal = []

[dependencies]
prost = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tonic = { workspace = true, features = ["codegen"], optional = true }
tonic-prost = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros"], optional = true }
pbjson = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# Protobuf types 
pbjson-types = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
pbjson-build = { workspace = true }
